--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -56,18 +54,14 @@ button {
   border-radius: 5px;
   cursor: pointer;
 }
-button:hover {
-  background: #ffcd54;
-}
+button:hover { background: #ffcd54; }
 .post {
   border-bottom: 1px solid #333;
   padding: 10px 0;
   cursor: pointer;
   transition: background 0.2s;
 }
-.post:hover {
-  background: #202020;
-}
+.post:hover { background: #202020; }
 .post img {
   max-width: 100%;
   border-radius: 10px;
@@ -80,30 +74,13 @@ button:hover {
   font-size: 0.9em;
   color: #ccc;
 }
-a {
-  color: #4da3ff;
-  word-break: break-all;
-}
+a { color: #4da3ff; word-break: break-all; }
 #logoutBtn {
-  float: right;
-  background: #e74c3c;
-  color: white;
-  font-weight: bold;
-  border-radius: 6px;
+  float: right; background: #e74c3c; color: white; font-weight: bold; border-radius: 6px;
 }
-#logoutBtn:hover {
-  background: #ff6b6b;
-}
-#backBtn {
-  margin-bottom: 10px;
-  background: #666;
-  color: white;
-}
-#loading {
-  text-align: center;
-  padding: 20px;
-  color: #777;
-}
+#logoutBtn:hover { background: #ff6b6b; }
+#backBtn { margin-bottom: 10px; background: #666; color: white; }
+#loading { text-align: center; padding: 20px; color: #777; }
 </style>
 </head>
 <body>
@@ -158,243 +135,227 @@ let allPosts = [];
 let visibleCount = 0;
 const LOAD_STEP = 5;
 
-// Load tunnel.txt
+let roles = {}; // from roles.txt
+let banned = []; // list of banned users
+
 async function loadTunnel() {
   try {
     const t = await fetch("tunnel.txt");
     SERVER_URL = (await t.text()).trim();
+    const r = await fetch("roles.txt");
+    const txt = await r.text();
+    roles = {};
+    banned = [];
+    txt.split(/\r?\n/).forEach(line=>{
+      line=line.trim(); if(!line) return;
+      if(line.startsWith("BAN:")) banned.push(line.slice(4).trim());
+      else {
+        const [u,role] = line.split("=");
+        if(u&&role) roles[u.trim()]=role.trim();
+      }
+    });
   } catch {
-    alert("⚠️ Could not load tunnel.txt");
+    alert("⚠️ Could not load tunnel.txt or roles.txt");
   }
 }
 
-function showBanner(show) {
-  document.getElementById("statusBanner").style.display = show ? "block" : "none";
-}
+function getRole(user){ return roles[user] || "user"; }
+function isMod(u){ return ["mod","admin","owner"].includes(getRole(u)); }
+function isAdmin(u){ return ["admin","owner"].includes(getRole(u)); }
+function isOwner(u){ return getRole(u)==="owner"; }
 
-async function checkServer() {
-  try {
-    const res = await fetch(`${SERVER_URL}/?key=${KEY}`);
-    const data = await res.json();
-    if (data.ok) {
-      showBanner(false);
-      return true;
-    }
-  } catch {
-    showBanner(true);
-  }
+function showBanner(show){ document.getElementById("statusBanner").style.display=show?"block":"none"; }
+
+async function checkServer(){
+  try{
+    const res=await fetch(`${SERVER_URL}/?key=${KEY}`);
+    const data=await res.json();
+    if(data.ok){ showBanner(false); return true; }
+  }catch{ showBanner(true); }
   return false;
 }
 
-function toggleRegister() {
-  loginSection.style.display = "none";
-  registerSection.style.display = "block";
-}
-function toggleLogin() {
-  registerSection.style.display = "none";
-  loginSection.style.display = "block";
-}
-function logout() {
+function toggleRegister(){ loginSection.style.display="none"; registerSection.style.display="block"; }
+function toggleLogin(){ registerSection.style.display="none"; loginSection.style.display="block"; }
+function logout(){
   localStorage.removeItem("btd6_user");
-  currentUser = null;
-  main.style.display = "none";
-  postView.style.display = "none";
-  loginSection.style.display = "block";
+  currentUser=null;
+  main.style.display="none";
+  postView.style.display="none";
+  loginSection.style.display="block";
 }
 
-async function loadRoom() {
-  try {
-    const res = await fetch(`${SERVER_URL}/room/${ROOM}?key=${KEY}`);
-    const json = await res.json();
-    if (!json.ok) throw new Error();
-    const data = json.data || {};
-    data.posts ||= [];
-    data.users ||= {};
+async function loadRoom(){
+  try{
+    const res=await fetch(`${SERVER_URL}/room/${ROOM}?key=${KEY}`);
+    const json=await res.json();
+    if(!json.ok) throw new Error();
+    const data=json.data||{};
+    data.posts||=[]; data.users||={};
     return data;
-  } catch {
-    showBanner(true);
-    return { users: {}, posts: [] };
-  }
+  }catch{ showBanner(true); return {users:{},posts:[]}; }
 }
 
-async function saveRoom(data) {
-  await fetch(`${SERVER_URL}/room/${ROOM}?key=${KEY}`, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify(data)
+async function saveRoom(data){
+  await fetch(`${SERVER_URL}/room/${ROOM}?key=${KEY}`,{
+    method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify(data)
   });
 }
 
-async function register() {
-  const user = regUser.value.trim(), pass = regPass.value.trim();
-  if (!user || !pass) return alert("Enter username & password");
-  const data = await loadRoom();
-  if (data.users[user]) return alert("Username taken");
-  data.users[user] = { password: pass, followers: [], following: [] };
+async function register(){
+  const user=regUser.value.trim(),pass=regPass.value.trim();
+  if(!user||!pass)return alert("Enter username & password");
+  if(banned.includes(user))return alert("You are banned!");
+  const data=await loadRoom();
+  if(data.users[user])return alert("Username taken");
+  data.users[user]={password:pass,followers:[],following:[]};
   await saveRoom(data);
   alert("Registered successfully!");
   toggleLogin();
 }
 
-async function login() {
-  const user = loginUser.value.trim(), pass = loginPass.value.trim();
-  const data = await loadRoom();
-  if (data.users[user]?.password === pass) {
-    currentUser = user;
-    localStorage.setItem("btd6_user", user);
-    loginSection.style.display = "none";
-    main.style.display = "block";
-    const urlParams = new URLSearchParams(window.location.search);
-    if (urlParams.has("post")) {
-      openPost(urlParams.get("post"));
-    } else {
-      loadPosts(true);
-    }
+async function login(){
+  const user=loginUser.value.trim(),pass=loginPass.value.trim();
+  if(banned.includes(user))return alert("You are banned from this site.");
+  const data=await loadRoom();
+  if(data.users[user]?.password===pass){
+    currentUser=user;
+    localStorage.setItem("btd6_user",user);
+    loginSection.style.display="none";
+    main.style.display="block";
+    const urlParams=new URLSearchParams(window.location.search);
+    if(urlParams.has("post"))openPost(urlParams.get("post"));
+    else loadPosts(true);
   } else alert("Invalid login");
 }
 
-async function createPost() {
-  const text = postText.value.trim();
-  const link = postLink.value.trim();
-  const imgFile = postImage.files[0];
-  if (!text && !imgFile && !link) return alert("Cannot post empty content");
-
-  const data = await loadRoom();
-  let imageUrl = "";
-  if (imgFile) {
-    const form = new FormData();
-    form.append("file", imgFile);
-    const res = await fetch(`${SERVER_URL}/file/${encodeURIComponent(imgFile.name)}?key=${KEY}`, {
-      method: "POST", body: form
-    });
-    const upload = await res.json();
-    if (upload.ok) imageUrl = `${SERVER_URL}/file/${encodeURIComponent(upload.filename)}?key=${KEY}`;
+async function createPost(){
+  const text=postText.value.trim();
+  const link=postLink.value.trim();
+  const imgFile=postImage.files[0];
+  if(!text&&!imgFile&&!link)return alert("Cannot post empty content");
+  const data=await loadRoom();
+  let imageUrl="";
+  if(imgFile){
+    const form=new FormData();
+    form.append("file",imgFile);
+    const res=await fetch(`${SERVER_URL}/file/${encodeURIComponent(imgFile.name)}?key=${KEY}`,{method:"POST",body:form});
+    const upload=await res.json();
+    if(upload.ok)imageUrl=`${SERVER_URL}/file/${encodeURIComponent(upload.filename)}?key=${KEY}`;
   }
-
-  data.posts.unshift({
-    id: Date.now(),
-    author: currentUser,
-    text, link, image: imageUrl,
-    time: new Date().toLocaleString(),
-    likes: [], dislikes: [], comments: []
-  });
+  data.posts.unshift({id:Date.now(),author:currentUser,text,link,image:imageUrl,time:new Date().toLocaleString(),likes:[],dislikes:[],comments:[]});
   await saveRoom(data);
-  postText.value = "";
-  postLink.value = "";
-  postImage.value = "";
+  postText.value=""; postLink.value=""; postImage.value="";
   loadPosts(true);
 }
 
-async function loadPosts(reset=false) {
-  const data = await loadRoom();
-  allPosts = data.posts || [];
-  visibleCount = reset ? 0 : visibleCount;
+async function loadPosts(reset=false){
+  const data=await loadRoom();
+  allPosts=data.posts||[];
+  visibleCount=reset?0:visibleCount;
   renderNextPosts();
 }
 
-function renderNextPosts() {
-  const container = document.getElementById("posts");
-  const next = allPosts.slice(visibleCount, visibleCount + LOAD_STEP);
-  if (visibleCount === 0) container.innerHTML = "";
-  next.forEach(p => {
-    const div = document.createElement("div");
-    div.className = "post";
-    div.innerHTML = `
+function renderNextPosts(){
+  const container=document.getElementById("posts");
+  const next=allPosts.slice(visibleCount,visibleCount+5);
+  if(visibleCount===0)container.innerHTML="";
+  next.forEach(p=>{
+    const div=document.createElement("div");
+    div.className="post";
+    div.innerHTML=`
       <b>${p.author}</b> <small>${p.time}</small>
       <div>${p.text}</div>
-      ${p.image ? `<img src="${p.image}">` : ""}
-      ${p.link ? `<div><a href="${p.link}" target="_blank">${p.link}</a></div>` : ""}
+      ${p.image?`<img src="${p.image}">`:""}
+      ${p.link?`<div><a href="${p.link}" target="_blank">${p.link}</a></div>`:""}
+      ${(p.author===currentUser||isMod(currentUser))?`<button onclick="deletePost(event,${p.id})">🗑 Delete</button>`:""}
     `;
-    div.onclick = () => openPost(p.id);
+    div.onclick=(e)=>{ if(e.target.tagName!=="BUTTON")openPost(p.id); };
     container.appendChild(div);
   });
-  visibleCount += next.length;
-  document.getElementById("loading").style.display =
-    visibleCount < allPosts.length ? "block" : "none";
+  visibleCount+=next.length;
+  document.getElementById("loading").style.display=visibleCount<allPosts.length?"block":"none";
 }
 
-window.addEventListener("scroll", () => {
-  if (window.innerHeight + window.scrollY >= document.body.scrollHeight - 100) {
-    renderNextPosts();
-  }
-});
+window.addEventListener("scroll",()=>{ if(window.innerHeight+window.scrollY>=document.body.scrollHeight-100)renderNextPosts(); });
 
-async function openPost(id) {
-  const data = await loadRoom();
-  const p = data.posts.find(x => x.id == id);
-  if (!p) return alert("Post not found");
-  main.style.display = "none";
-  postView.style.display = "block";
-  document.title = `${p.author} - BTD6 Social`;
+async function deletePost(e,id){
+  e.stopPropagation();
+  if(!confirm("Delete this post?"))return;
+  const data=await loadRoom();
+  data.posts=data.posts.filter(p=>p.id!=id);
+  await saveRoom(data);
+  loadPosts(true);
+}
+
+async function openPost(id){
+  const data=await loadRoom();
+  const p=data.posts.find(x=>x.id==id);
+  if(!p)return alert("Post not found");
+  main.style.display="none"; postView.style.display="block";
+  document.title=`${p.author} - BTD6 Social`;
   window.history.replaceState({}, "", `?post=${id}`);
-  document.getElementById("postContent").innerHTML = `
+  document.getElementById("postContent").innerHTML=`
     <h3>${p.author}</h3>
     <small>${p.time}</small>
     <p>${p.text}</p>
-    ${p.image ? `<img src="${p.image}">` : ""}
-    ${p.link ? `<div><a href="${p.link}" target="_blank">${p.link}</a></div>` : ""}
+    ${p.image?`<img src="${p.image}">`:""}
+    ${p.link?`<div><a href="${p.link}" target="_blank">${p.link}</a></div>`:""}
     <div style="margin-top:10px;">
-      <button onclick="likePost(${p.id},'like')">👍 ${p.likes?.length || 0}</button>
-      <button onclick="likePost(${p.id},'dislike')">👎 ${p.dislikes?.length || 0}</button>
-      <button onclick="addComment(${p.id})">💬 ${p.comments?.length || 0}</button>
+      <button onclick="likePost(${p.id},'like')">👍 ${p.likes?.length||0}</button>
+      <button onclick="likePost(${p.id},'dislike')">👎 ${p.dislikes?.length||0}</button>
+      <button onclick="addComment(${p.id})">💬 ${p.comments?.length||0}</button>
       <button onclick="sharePost(${p.id})">🔗 Share</button>
+      ${(p.author===currentUser||isMod(currentUser))?`<button onclick="deletePost(event,${p.id})">🗑 Delete</button>`:""}
+      ${(isAdmin(currentUser)&&p.author!==currentUser)?`<button onclick="banUser('${p.author}')">🚫 Ban User</button>`:""}
     </div>
     ${(p.comments||[]).map(c=>`<div class='comment'><b>${c.author}</b>: ${c.text}</div>`).join("")}
   `;
 }
 
-function closePost() {
-  postView.style.display = "none";
-  main.style.display = "block";
-  window.history.replaceState({}, "", window.location.pathname);
+async function banUser(user){
+  if(!confirm(`Ban ${user}?`))return;
+  const resp=await fetch("roles.txt",{method:"POST",body:`BAN:${user}\n`});
+  alert(`${user} banned (update roles.txt manually on server if not saved).`);
 }
 
-function sharePost(id) {
-  const link = `${window.location.origin}${window.location.pathname}?post=${id}`;
-  navigator.clipboard.writeText(link);
-  alert("Post link copied!");
+function closePost(){ postView.style.display="none"; main.style.display="block"; window.history.replaceState({}, "", window.location.pathname); }
+
+function sharePost(id){
+  const link=`${window.location.origin}${window.location.pathname}?post=${id}`;
+  navigator.clipboard.writeText(link); alert("Post link copied!");
 }
 
-async function likePost(id, type) {
-  const data = await loadRoom();
-  const post = data.posts.find(p => p.id == id);
-  if (!post) return;
-  if (type === "like") {
-    if (post.likes.includes(currentUser)) post.likes = post.likes.filter(u => u !== currentUser);
-    else {
-      post.likes.push(currentUser);
-      post.dislikes = post.dislikes.filter(u => u !== currentUser);
-    }
+async function likePost(id,type){
+  const data=await loadRoom();
+  const post=data.posts.find(p=>p.id==id); if(!post)return;
+  if(type==="like"){
+    if(post.likes.includes(currentUser))post.likes=post.likes.filter(u=>u!==currentUser);
+    else{ post.likes.push(currentUser); post.dislikes=post.dislikes.filter(u=>u!==currentUser); }
   } else {
-    if (post.dislikes.includes(currentUser)) post.dislikes = post.dislikes.filter(u => u !== currentUser);
-    else {
-      post.dislikes.push(currentUser);
-      post.likes = post.likes.filter(u => u !== currentUser);
-    }
+    if(post.dislikes.includes(currentUser))post.dislikes=post.dislikes.filter(u=>u!==currentUser);
+    else{ post.dislikes.push(currentUser); post.likes=post.likes.filter(u=>u!==currentUser); }
   }
-  await saveRoom(data);
-  openPost(id);
+  await saveRoom(data); openPost(id);
 }
 
-async function addComment(id) {
-  const text = prompt("Enter comment:");
-  if (!text) return;
-  const data = await loadRoom();
-  const post = data.posts.find(p => p.id == id);
-  post.comments.push({ author: currentUser, text, time: new Date().toLocaleTimeString() });
-  await saveRoom(data);
-  openPost(id);
+async function addComment(id){
+  const text=prompt("Enter comment:"); if(!text)return;
+  const data=await loadRoom();
+  const post=data.posts.find(p=>p.id==id);
+  post.comments.push({author:currentUser,text,time:new Date().toLocaleTimeString()});
+  await saveRoom(data); openPost(id);
 }
 
-window.onload = async () => {
+window.onload=async()=>{
   await loadTunnel();
-  const ok = await checkServer();
-  if (!ok) return;
-  if (currentUser) {
-    loginSection.style.display = "none";
-    main.style.display = "block";
-    const urlParams = new URLSearchParams(window.location.search);
-    if (urlParams.has("post")) openPost(urlParams.get("post"));
+  const ok=await checkServer();
+  if(!ok)return;
+  if(currentUser){
+    loginSection.style.display="none";
+    main.style.display="block";
+    const urlParams=new URLSearchParams(window.location.search);
+    if(urlParams.has("post"))openPost(urlParams.get("post"));
     else loadPosts(true);
   }
 };
