--- a/index.html
+++ b/index.html
@@ -20,14 +20,6 @@ header {
   font-size: 1.4em;
   color: #f6b93b;
   font-weight: bold;
-  position: sticky;
-  top: 0;
-}
-#serverStatus {
-  display: block;
-  font-size: 0.8em;
-  color: #ccc;
-  margin-top: 5px;
 }
 #statusBanner {
   background: #c0392b;
@@ -71,7 +63,9 @@ button:hover {
   cursor: pointer;
   transition: background 0.2s;
 }
-.post:hover { background: #202020; }
+.post:hover {
+  background: #202020;
+}
 .post img {
   max-width: 100%;
   border-radius: 10px;
@@ -84,7 +78,10 @@ button:hover {
   font-size: 0.9em;
   color: #ccc;
 }
-a { color: #4da3ff; word-break: break-all; }
+a {
+  color: #4da3ff;
+  word-break: break-all;
+}
 #logoutBtn {
   float: right;
   background: #e74c3c;
@@ -92,7 +89,9 @@ a { color: #4da3ff; word-break: break-all; }
   font-weight: bold;
   border-radius: 6px;
 }
-#logoutBtn:hover { background: #ff6b6b; }
+#logoutBtn:hover {
+  background: #ff6b6b;
+}
 #backBtn {
   margin-bottom: 10px;
   background: #666;
@@ -103,15 +102,22 @@ a { color: #4da3ff; word-break: break-all; }
   padding: 20px;
   color: #777;
 }
+.roleTag {
+  font-size: 0.8em;
+  padding: 2px 6px;
+  margin-left: 5px;
+  border-radius: 5px;
+  color: #000;
+}
+.role-Owner { background: #f6b93b; }
+.role-Admin { background: #3498db; }
+.role-Mod { background: #2ecc71; }
 </style>
 </head>
 <body>
-<header>
-🐵 BTD6 Social
-<span id="serverStatus">Loading tunnel...</span>
-</header>
+<header>🐵 BTD6 Social</header>
 
-<div id="statusBanner">⚠️ Server Offline — Retrying...</div>
+<div id="statusBanner">⚠️ Server Offline — Retrying in <span id="retryTimer">5</span>s...</div>
 
 <div id="loginSection">
   <h3>Login</h3>
@@ -155,22 +161,33 @@ let SERVER_URL = "";
 const KEY = "5duM4W8HZiQBSU4v";
 const ROOM = "btd6-social";
 const RETRY_INTERVAL = 5;
+let roles = {};
 let currentUser = localStorage.getItem("btd6_user") || null;
 let allPosts = [];
 let visibleCount = 0;
 const LOAD_STEP = 5;
 
-async function loadTunnel() {
+// Load tunnel.txt and roles.txt
+async function loadConfig() {
   try {
     const t = await fetch("tunnel.txt");
     SERVER_URL = (await t.text()).trim();
-    if (SERVER_URL.startsWith("http")) {
-      document.getElementById("serverStatus").textContent = "✅ Connected to: " + SERVER_URL;
-    } else throw new Error();
-  } catch {
-    document.getElementById("serverStatus").textContent = "❌ Could not load tunnel.txt";
-    alert("⚠️ Could not load tunnel.txt — please ensure it exists beside this HTML file.");
-  }
+  } catch { alert("⚠️ Could not load tunnel.txt"); }
+
+  try {
+    const r = await fetch("roles.txt");
+    const txt = await r.text();
+    txt.split("\n").forEach(line => {
+      const [role, name] = line.split("=");
+      if (role && name) roles[name.trim()] = role.trim();
+    });
+  } catch { alert("⚠️ Could not load roles.txt"); }
+}
+
+function getRoleTag(user) {
+  const role = roles[user];
+  if (!role) return "";
+  return `<span class="roleTag role-${role}">${role}</span>`;
 }
 
 function showBanner(show) {
@@ -178,26 +195,16 @@ function showBanner(show) {
 }
 
 async function checkServer() {
-  if (!SERVER_URL) return false;
   try {
     const res = await fetch(`${SERVER_URL}/?key=${KEY}`);
     const data = await res.json();
-    if (data.ok) {
-      showBanner(false);
-      return true;
-    }
+    if (data.ok) { showBanner(false); return true; }
   } catch { showBanner(true); }
   return false;
 }
 
-function toggleRegister() {
-  loginSection.style.display = "none";
-  registerSection.style.display = "block";
-}
-function toggleLogin() {
-  registerSection.style.display = "none";
-  loginSection.style.display = "block";
-}
+function toggleRegister() { loginSection.style.display = "none"; registerSection.style.display = "block"; }
+function toggleLogin() { registerSection.style.display = "none"; loginSection.style.display = "block"; }
 function logout() {
   localStorage.removeItem("btd6_user");
   currentUser = null;
@@ -207,10 +214,6 @@ function logout() {
 }
 
 async function loadRoom() {
-  if (!SERVER_URL) {
-    showBanner(true);
-    return { users: {}, posts: [] };
-  }
   try {
     const res = await fetch(`${SERVER_URL}/room/${ROOM}?key=${KEY}`);
     const json = await res.json();
@@ -218,6 +221,13 @@ async function loadRoom() {
     const data = json.data || {};
     data.posts ||= [];
     data.users ||= {};
+    // Auto-fix old image URLs
+    data.posts.forEach(p => {
+      if (p.image && !p.image.startsWith(SERVER_URL)) {
+        const fileName = p.image.split("/file/")[1]?.split("?")[0];
+        if (fileName) p.image = `${SERVER_URL}/file/${fileName}?key=${KEY}`;
+      }
+    });
     return data;
   } catch {
     showBanner(true);
@@ -226,7 +236,6 @@ async function loadRoom() {
 }
 
 async function saveRoom(data) {
-  if (!SERVER_URL) return;
   await fetch(`${SERVER_URL}/room/${ROOM}?key=${KEY}`, {
     method: "POST",
     headers: { "Content-Type": "application/json" },
@@ -235,7 +244,6 @@ async function saveRoom(data) {
 }
 
 async function register() {
-  if (!SERVER_URL) return alert("⚠️ Server not ready yet.");
   const user = regUser.value.trim(), pass = regPass.value.trim();
   if (!user || !pass) return alert("Enter username & password");
   const data = await loadRoom();
@@ -247,13 +255,8 @@ async function register() {
 }
 
 async function login() {
-  if (!SERVER_URL) return alert("⚠️ Server not ready yet. Wait for tunnel.txt to load.");
   const user = loginUser.value.trim(), pass = loginPass.value.trim();
   const data = await loadRoom();
-  if (!data || !data.users) {
-    alert("⚠️ Could not reach the server.");
-    return;
-  }
   if (data.users[user]?.password === pass) {
     currentUser = user;
     localStorage.setItem("btd6_user", user);
@@ -266,11 +269,11 @@ async function login() {
 }
 
 async function createPost() {
-  if (!SERVER_URL) return alert("⚠️ Server not ready yet.");
   const text = postText.value.trim();
   const link = postLink.value.trim();
   const imgFile = postImage.files[0];
   if (!text && !imgFile && !link) return alert("Cannot post empty content");
+
   const data = await loadRoom();
   let imageUrl = "";
   if (imgFile) {
@@ -282,6 +285,7 @@ async function createPost() {
     const upload = await res.json();
     if (upload.ok) imageUrl = `${SERVER_URL}/file/${encodeURIComponent(upload.filename)}?key=${KEY}`;
   }
+
   data.posts.unshift({
     id: Date.now(),
     author: currentUser,
@@ -290,8 +294,7 @@ async function createPost() {
     likes: [], dislikes: [], comments: []
   });
   await saveRoom(data);
-  postText.value = "";
-  postLink.value = "";
+  postText.value = postLink.value = "";
   postImage.value = "";
   loadPosts(true);
 }
@@ -311,7 +314,7 @@ function renderNextPosts() {
     const div = document.createElement("div");
     div.className = "post";
     div.innerHTML = `
-      <b>${p.author}</b> <small>${p.time}</small>
+      <b>${p.author}</b> ${getRoleTag(p.author)} <small>${p.time}</small>
       <div>${p.text}</div>
       ${p.image ? `<img src="${p.image}">` : ""}
       ${p.link ? `<div><a href="${p.link}" target="_blank">${p.link}</a></div>` : ""}
@@ -325,9 +328,7 @@ function renderNextPosts() {
 }
 
 window.addEventListener("scroll", () => {
-  if (window.innerHeight + window.scrollY >= document.body.scrollHeight - 100) {
-    renderNextPosts();
-  }
+  if (window.innerHeight + window.scrollY >= document.body.scrollHeight - 100) renderNextPosts();
 });
 
 async function openPost(id) {
@@ -338,8 +339,10 @@ async function openPost(id) {
   postView.style.display = "block";
   document.title = `${p.author} - BTD6 Social`;
   window.history.replaceState({}, "", `?post=${id}`);
+
+  const canDelete = (p.author === currentUser) || ["Owner","Admin","Mod"].includes(roles[currentUser]);
   document.getElementById("postContent").innerHTML = `
-    <h3>${p.author}</h3>
+    <h3>${p.author} ${getRoleTag(p.author)}</h3>
     <small>${p.time}</small>
     <p>${p.text}</p>
     ${p.image ? `<img src="${p.image}">` : ""}
@@ -349,9 +352,20 @@ async function openPost(id) {
       <button onclick="likePost(${p.id},'dislike')">👎 ${p.dislikes?.length || 0}</button>
       <button onclick="addComment(${p.id})">💬 ${p.comments?.length || 0}</button>
       <button onclick="sharePost(${p.id})">🔗 Share</button>
+      ${canDelete ? `<button style="background:#e74c3c;color:white;" onclick="deletePost(${p.id})">🗑 Delete</button>` : ""}
     </div>
     ${(p.comments||[]).map(c=>`<div class='comment'><b>${c.author}</b>: ${c.text}</div>`).join("")}
   `;
+}
+
+async function deletePost(id) {
+  if (!confirm("Are you sure you want to delete this post?")) return;
+  const data = await loadRoom();
+  data.posts = data.posts.filter(p => p.id != id);
+  await saveRoom(data);
+  alert("Post deleted");
+  closePost();
+  loadPosts(true);
 }
 
 function closePost() {
@@ -398,7 +412,7 @@ async function addComment(id) {
 }
 
 window.onload = async () => {
-  await loadTunnel();
+  await loadConfig();
   const ok = await checkServer();
   if (!ok) return;
   if (currentUser) {
