--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ const qAll = s => Array.from(document.querySelectorAll(s));
 function escapeHtml(s){ if (s===undefined || s===null) return ""; return String(s).replace(/[&<>"']/g, c => ({ '&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;' })[c]); }
 function escapeAttr(s){ return String(s).replace(/"/g,'&quot;'); }
 
-/* ============ Server / room helpers (store under /server_data) ============ */
+/* ============ Server / room helpers (simulate /server_data using existing /room backend) ============ */
 async function loadConfig(){
   try {
     const r = await fetch("tunnel.txt");
@@ -132,58 +132,47 @@ async function loadConfig(){
 
 function serverAvailable(){ return !!SERVER_URL; }
 
-/* Fetch the shared data file from /server_data */
+/* Fetch from your backend (/room/btd6-social), wrap as if it were /server_data */
 async function serverFetchRoom(){
   if (!SERVER_URL) throw new Error("SERVER_URL not configured");
 
-  const url = `${SERVER_URL}/server_data/${ROOM}.json?key=${KEY}`;
+  const url = `${SERVER_URL}/room/${ROOM}?key=${KEY}`;
   const res = await fetch(url);
-  
-  // If file doesn’t exist yet, create it
-  if (res.status === 404) {
-    console.log("No existing data file — creating new:", `${ROOM}.json`);
-    const empty = { server_storage: {} };
-    await serverSaveRoom(empty);
-    return empty;
-  }
-
   if (!res.ok) throw new Error("server fetch failed");
 
-  try {
-    const json = await res.json();
-    return json || { server_storage: {} };
-  } catch (e) {
-    console.warn("Invalid JSON from server_data, resetting", e);
-    const empty = { server_storage: {} };
-    await serverSaveRoom(empty);
-    return empty;
+  const json = await res.json();
+  if (json.ok && json.data) {
+    if (!json.data.server_storage) json.data.server_storage = {};
+    return json.data;
   }
+  // fallback wrapper
+  return { server_storage: (json.server_storage || {}) };
 }
 
-/* Save updates to /server_data */
+/* Save to backend (same /room endpoint) */
 async function serverSaveRoom(data){
   if (!SERVER_URL) throw new Error("SERVER_URL not configured");
-  const url = `${SERVER_URL}/server_data/${ROOM}.json?key=${KEY}`;
-  const payload = JSON.stringify(data, null, 2);
 
-  const res = await fetch(url, {
+  const wrapped = { ok: true, data };
+  const res = await fetch(`${SERVER_URL}/room/${ROOM}?key=${KEY}`, {
     method: "POST",
     headers: { "Content-Type": "application/json" },
-    body: payload
+    body: JSON.stringify(wrapped)
   });
 
   if (!res.ok) throw new Error("server save failed");
-  return true;
+  try { return await res.json(); } catch { return { ok: true }; }
 }
 
-/* Server key-value helpers */
+/* Read a key (simulated from /server_data) */
 async function loadServerKey(keyName){
   const data = await serverFetchRoom();
   return (data.server_storage && data.server_storage[keyName]) 
-    ? data.server_storage[keyName] 
+    ? data.server_storage[keyName]
     : null;
 }
 
+/* Write a key (simulated /server_data) */
 async function saveServerKey(keyName, value){
   const data = await serverFetchRoom();
   data.server_storage = data.server_storage || {};
